ORG-2741: Java 25 oppgradering