@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.5</version>
+        <version>3.5.6</version>
     </parent>
 
     <groupId>no.nav.data</groupId>
@@ -15,9 +15,7 @@
     <description>Team oversikt</description>
 
     <properties>
-        <java.version>21</java.version>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <java.version>25</java.version>
 
         <springdoc.version>2.8.13</springdoc.version>
         <hypersistence-utils-hibernate-63.version>3.11.0</hypersistence-utils-hibernate-63.version>
@@ -26,6 +24,7 @@
         <lucene.version>10.3.0</lucene.version>
         <shedlock.version>6.10.0</shedlock.version>     <!-- bytte ut med bruk av Leader Elecctor ? -->
         <commons-collections4.version>4.5.0</commons-collections4.version>
+        <commons-lang3.version>3.18.0</commons-lang3.version>
         <microsoft-graph.version>6.52.0</microsoft-graph.version>
         <msal4j.version>1.23.1</msal4j.version>
         <unleash-client-java.version>11.1.0</unleash-client-java.version>
@@ -45,7 +44,7 @@
         <!-- Spring transitive versions -->
         <postgresql.version>42.7.7</postgresql.version>
 
-        <logback-core.version>1.5.18</logback-core.version>  <!-- https://github.com/navikt/team-catalog/security/dependabot/196 -->
+        <logback-core.version>1.5.19</logback-core.version>  <!-- https://github.com/navikt/team-catalog/security/dependabot/196 -->
     </properties>
 
     <dependencyManagement>
@@ -168,11 +167,6 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
                 <version>${commons-collections4.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.getunleash</groupId>
@@ -437,8 +431,9 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>${java.version}</release>
-                    <parameters>true</parameters>
+                    <compilerArgs>
+                        <arg>-proc:full</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -503,7 +498,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.13</version>
+                        <version>0.8.14</version>
                         <executions>
                             <execution>
                                 <goals>
